# hypercube

./: .gitignore  README.md  package-lock.json  package.json  setup.sh
backend/: package.json  tsconfig.json
backend/src/: index.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: index.ts  status.routes.ts  wasm.routes.ts
backend/src/utils/: logger.ts
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/public/: README.md
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/app/page-components/: SpaceScene.tsx
frontend/src/components/space-objects/: EnergySpheres.tsx  NeonComets.tsx  PolygonalCrystals.tsx  SynthLogo3D.tsx  index.ts
frontend/src/shaders/: cosmicBackground.frag  distortionEffect.frag  hypercube.frag  hypercube.vert  neonComet.frag  neonComet.vert
frontend/src/types/: hypercube-wasm.d.ts  wasm.d.ts
frontend/src/utils/: shaderUtils.ts
wasm/: Cargo.toml  package.json
wasm/src/: energy_spheres.rs  hypercube.rs  intersections.rs  lib.rs  neon_comets.rs  objective_main.rs  particles.rs  physics.rs  polygonal_crystals.rs  space_core.rs  space_objects.rs  utils.rs
