[package]
name = "hypercube-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly modules for the HYPERCUBE project"
authors = ["HYPERCUBE Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.64", features = [
  "console", 
  "Document", 
  "Element", 
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window",
  "Performance",
  "PerformanceTiming",
]}
rapier3d = { version = "0.18.0", features = ["wasm-bindgen", "simd-stable"] }
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
gloo-utils = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 