[package]
name = "hypercube-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly modules for the HYPERCUBE project"
authors = ["HYPERCUBE Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.64", features = [
  "console", 
  "Document", 
  "Element", 
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlProgram",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlTexture",
  "WebGlUniformLocation",
  "Window",
  "Performance",
  "PerformanceTiming",
]}
rapier3d = { version = "0.18.0", features = ["wasm-bindgen", "simd-stable"] }
nalgebra = { version = "0.32.4", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
gloo-utils = "0.2.0"
once_cell = "1.19.0"
dashmap = "6.1.0"
# Добавляем библиотеки для улучшенной 3D геометрии и рендеринга
glam = "0.25.0"  # Высокопроизводительная математическая библиотека для графики
rapier3d-f64 = { version = "0.18.0", features = ["wasm-bindgen"] } # Версия с двойной точностью для физики
parry3d = "0.13.5"  # Библиотека для обнаружения столкновений и запросов близости
bevy_math = "0.11.3"  # Математическая библиотека от Bevy для работы с 3D
noise = "0.8.2"  # Библиотека для генерации различных шумов (Perlin, Simplex и др.)

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1 